@@ -99,6 +99,8 @@ All (GUI):
 
 - Fixed wxHTML's pagebreaks computation in tables (D.J.Stauffer).
 - Fixed wxRichTextCtrl input that uses Alt on Mac OS X, for example Polish Pro input.
+- Fixed wxHtmlWindow::SelectionToText() to correctly insert newlines after
+  single-cell paragraphs.
 
 All (Unix):
 
